--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,7 +1,5 @@
 @use "@angular/material" as mat;
-
 @import "@angular/material/theming";
-
 @include mat.core();
 
 html,
@@ -15,6 +13,7 @@ body {
 }
 
 $angular-primary: mat.define-palette(mat.$indigo-palette, 500, 100, 900);
+$angular-primary-dark: mat.define-palette(mat.$indigo-palette, 200, 100, 900);
 $angular-accent: mat.define-palette(mat.$pink-palette, A200, A100, A400);
 
 $angular-warn: mat.define-palette(mat.$red-palette);
@@ -27,7 +26,7 @@ $angular-default-theme: mat.define-light-theme((color: (primary: $angular-primar
 
 @include mat.all-component-themes($angular-default-theme);
 
-$angular-dark-theme: mat.define-dark-theme((color: (primary: $angular-primary,
+$angular-dark-theme: mat.define-dark-theme((color: (primary: $angular-primary-dark,
         accent: $angular-accent,
         warn: $angular-warn,
       ),
