--- a/src/app/dialogs/about-dialog/about-dialog.component.html
+++ b/src/app/dialogs/about-dialog/about-dialog.component.html
@@ -2,7 +2,7 @@
 <div mat-dialog-content>
     <div><span>{{ 'aboutDialog.description' | translate }}</span> <a mat-button (click)="openWebsite()">https://www.eliastiksofts.com</a></div>
     <div><span>{{ 'aboutDialog.version' | translate }} {{app.version}}</span></div>
-    <div><span>{{ 'aboutDialog.versionDate' | translate }} {{renderDate()}}</span></div>
+    <div style="margin-top: 8px;"><span>{{ 'aboutDialog.versionDate' | translate }} {{renderDate()}}</span></div>
 </div>
 <mat-dialog-actions align="end">
     <button mat-button cdkFocusInitial (click)="closeDialog()">{{ 'aboutDialog.close' | translate }}</button>
