--- a/src/app/dialogs/update-dialog/update-dialog.component.html
+++ b/src/app/dialogs/update-dialog/update-dialog.component.html
@@ -1,10 +1,10 @@
 <h1 mat-dialog-title>{{ 'updateDialog.title' | translate }}</h1>
 <div mat-dialog-content>
-    <div *ngIf="searchingUpdate"><mat-spinner></mat-spinner></div>
-    <div *ngIf="!searchingUpdate && hasUpdate"><span>{{ 'updateDialog.hasUpdate' | translate }} ({{newVersion}})</span></div>
-    <div *ngIf="!searchingUpdate && !hasUpdate"><span>{{ 'updateDialog.hasNoUpdate' | translate }}</span></div>
+    <div *ngIf="updateService.searchingUpdate"><mat-spinner></mat-spinner></div>
+    <div *ngIf="!updateService.searchingUpdate && updateService.hasUpdate"><span>{{ 'updateDialog.hasUpdate' | translate }} ({{updateService.newVersion}})</span></div>
+    <div *ngIf="!updateService.searchingUpdate && !updateService.hasUpdate"><span>{{ 'updateDialog.hasNoUpdate' | translate }}</span></div>
 </div>
 <mat-dialog-actions align="end">
-    <button mat-button cdkFocusInitial (click)="download()" *ngIf="hasUpdate">{{ 'updateDialog.download' | translate }}</button>
+    <button mat-button cdkFocusInitial (click)="download()" *ngIf="updateService.hasUpdate">{{ 'updateDialog.download' | translate }}</button>
     <button mat-button cdkFocusInitial (click)="closeDialog()">{{ 'updateDialog.close' | translate }}</button>
 </mat-dialog-actions>
