--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,8 +6,8 @@
     <span>Virus Launcher by Eliastik's Softs</span>
     <span class="spacer"></span>
     <button mat-icon-button (click)="launchEgg()"></button>
-    <button mat-icon-button (click)="checkUpdate()" *ngIf="updateService.hasUpdate">
-      <mat-icon matBadge="!" matBadgeColor="warn">update</mat-icon>
+    <button mat-icon-button (click)="checkUpdate()" *ngIf="updateService.hasUpdate" matTooltip="{{ 'menu.updateAvailable' | translate }}">
+      <mat-icon matBadge="!" matBadgeColor="warn" aria-hidden="false">update</mat-icon>
     </button>
   </mat-toolbar-row>
 </mat-toolbar>
