--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -1,5 +1,5 @@
-<mat-grid-list cols="2" rowHeight="2:1">
-    <p class="lead-text">{{ 'main.description' | translate }}</p>
+<p class="lead-text">{{ 'main.description' | translate }}</p>
+<mat-grid-list [cols]="cols" rowHeight="200px" (window:resize)="onResize($event)">
     <mat-grid-tile *ngFor="let program of programs">
         <app-program [program]="program" *ngIf="!program.isEasterEgg"></app-program>
     </mat-grid-tile>
