--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,6 +9,9 @@
     <button mat-icon-button (click)="showMissingFiles()" *ngIf="nativeService.missingFiles && nativeService.missingFiles.length > 0" matTooltip="{{ 'menu.missingFiles' | translate }}">
       <mat-icon matBadge="!" matBadgeColor="warn" aria-hidden="false">warning</mat-icon>
     </button>
+    <button mat-icon-button (click)="showModifiedFiles()" *ngIf="nativeService.modifiedFiles && nativeService.modifiedFiles.length > 0 && !(nativeService.missingFiles && nativeService.missingFiles.length > 0)" matTooltip="{{ 'menu.modifiedFiles' | translate }}">
+      <mat-icon matBadge="!" matBadgeColor="warn" aria-hidden="false">warning</mat-icon>
+    </button>
     <button mat-icon-button (click)="checkUpdate()" *ngIf="updateService.hasUpdate" matTooltip="{{ 'menu.updateAvailable' | translate }}">
       <mat-icon matBadge="!" matBadgeColor="warn" aria-hidden="false">update</mat-icon>
     </button>
