--- a/src/app/dialogs/modified-files-dialog/modified-files-dialog.component.html
+++ b/src/app/dialogs/modified-files-dialog/modified-files-dialog.component.html
@@ -3,6 +3,7 @@
     <div><span>{{ 'modifiedFilesDialog.description' | translate }}</span></div>
     <div style="margin-top: 8px;"><strong>{{ 'modifiedFilesDialog.details' | translate }}</strong></div>
     <div style="margin-top: 8px;">{{modifiedFiles && modifiedFiles.join(", ")}}</div>
+    <mat-slide-toggle [(ngModel)]="dontShowAgain" (change)="changeDontShowAgain()" style="margin-top: 12px;">{{ 'modifiedFilesDialog.dontShowAgain' | translate }}</mat-slide-toggle>
 </div>
 <mat-dialog-actions align="end">
     <button mat-button cdkFocusInitial (click)="downloadAssets()">{{ 'modifiedFilesDialog.download' | translate }}</button>
