--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,10 +6,13 @@
     <span>Virus Launcher by Eliastik's Softs</span>
     <span class="spacer"></span>
     <button mat-icon-button (click)="launchEgg()"></button>
-    <button mat-icon-button (click)="showMissingFiles()" *ngIf="nativeService.missingFiles && nativeService.missingFiles.length > 0" matTooltip="{{ 'menu.missingFiles' | translate }}">
+    <button mat-icon-button (click)="showUpdatedFiles()" *ngIf="nativeService.hasUpdateFiles" matTooltip="{{ 'menu.updatedFiles' | translate }}">
       <mat-icon matBadge="!" matBadgeColor="warn" aria-hidden="false">warning</mat-icon>
     </button>
-    <button mat-icon-button (click)="showModifiedFiles()" *ngIf="nativeService.modifiedFiles && nativeService.modifiedFiles.length > 0 && !(nativeService.missingFiles && nativeService.missingFiles.length > 0)" matTooltip="{{ 'menu.modifiedFiles' | translate }}">
+    <button mat-icon-button (click)="showMissingFiles()" *ngIf="nativeService.hasUpdateFiles && nativeService.missingFiles && nativeService.missingFiles.length > 0" matTooltip="{{ 'menu.missingFiles' | translate }}">
+      <mat-icon matBadge="!" matBadgeColor="warn" aria-hidden="false">warning</mat-icon>
+    </button>
+    <button mat-icon-button (click)="showModifiedFiles()" *ngIf="nativeService.hasUpdateFiles && nativeService.modifiedFiles && nativeService.modifiedFiles.length > 0 && !(nativeService.missingFiles && nativeService.missingFiles.length > 0)" matTooltip="{{ 'menu.modifiedFiles' | translate }}">
       <mat-icon matBadge="!" matBadgeColor="warn" aria-hidden="false">warning</mat-icon>
     </button>
     <button mat-icon-button (click)="checkUpdate()" *ngIf="updateService.hasUpdate" matTooltip="{{ 'menu.updateAvailable' | translate }}">
