--- a/src/styles.scss
+++ b/src/styles.scss
@@ -11,13 +11,13 @@ body {
   font-family: Roboto, "Helvetica Neue", sans-serif;
 }
 
-$angular-primary: mat.define-palette(mat.$indigo-palette, 500, 100, 900);
-$angular-primary-dark: mat.define-palette(mat.$indigo-palette, 200, 100, 900);
-$angular-accent: mat.define-palette(mat.$pink-palette, A200, A100, A400);
+$angular-primary: mat.m2-define-palette(mat.$m2-indigo-palette, 500, 100, 900);
+$angular-primary-dark: mat.m2-define-palette(mat.$m2-indigo-palette, 200, 100, 900);
+$angular-accent: mat.m2-define-palette(mat.$m2-pink-palette, A200, A100, A400);
 
-$angular-warn: mat.define-palette(mat.$red-palette);
+$angular-warn: mat.m2-define-palette(mat.$m2-red-palette);
 
-$angular-default-theme: mat.define-light-theme((color: (primary: $angular-primary,
+$angular-default-theme: mat.m2-define-light-theme((color: (primary: $angular-primary,
         accent: $angular-accent,
         warn: $angular-warn,
       ),
@@ -25,7 +25,7 @@ $angular-default-theme: mat.define-light-theme((color: (primary: $angular-primar
 
 @include mat.all-component-themes($angular-default-theme);
 
-$angular-dark-theme: mat.define-dark-theme((color: (primary: $angular-primary-dark,
+$angular-dark-theme: mat.m2-define-dark-theme((color: (primary: $angular-primary-dark,
         accent: $angular-accent,
         warn: $angular-warn,
       ),
